--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^11.12.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
